fixed style of code blocks to prevent overflow

--- a/res/mobile.css
+++ b/res/mobile.css
@@ -49,6 +49,7 @@ code, kbd {
   color: #26282c;
 }
 code {
+  white-space: normal;
   background-color: #ded2cf;
   padding: 0.125em;
 }
